authenticating through oauth

--- a/tests/BrunoVianaTest/Glue/TasksBackendApi/codeception.yml
+++ b/tests/BrunoVianaTest/Glue/TasksBackendApi/codeception.yml
@@ -41,3 +41,4 @@ suites:
 ##                - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
 #                - \BrunoVianaTest\Zed\Tasks\Helper\TasksBusinessAssertionHelper
                 - \BrunoVianaTest\Shared\Tasks\Helper\TaskDataHelper
+                - \SprykerTest\Shared\User\Helper\UserDataHelper
